--- a/tests/sphere56/sphere.ini
+++ b/tests/sphere56/sphere.ini
@@ -80,12 +80,12 @@ Log=logs/
 //MapSendID = Sets the mapX file to read for the client (this can be different than MapReadID but, obviously, not recomended for normal usage).
 
 // Map of Felucca
-//Map0=6144,4096,-1,0,0		//Old size
-Map0=7168,4096,-1,0,0		//ML size
+Map0=6144,4096,-1,0,0		//Old size
+//Map0=7168,4096,-1,0,0		//ML size
 
 // Map of Trammel
-//Map1=6144,4096,-1,1,1		//Old size
-Map1=7168,4096,-1,1,1		//ML size
+Map1=6144,4096,-1,1,1		//Old size
+//Map1=7168,4096,-1,1,1		//ML size
 
 // Map of Ilshenar
 Map2=2304,1600,-1,2,2
@@ -98,6 +98,8 @@ Map4=1448,1448,-1,4,4
 
 // Map of Ter Mur
 Map5=1280,4096,-1,5,5
+
+Map10=6144,4096,-1,0,10		//Old size
 
 // To enable the use of MapDif*.mul and StaDif*.mul files, set this to 1 (NOTE: these files were removed on clients 6+).
 UseMapDiffs=0
